@@ -97,6 +97,9 @@ Bug Fixes
   should appear up-to-date.)
   (John Arbash Meinel, Martin <gzlist>, #488724)
 
+* Improve discussion of pending merges in the documentation for
+  ``revert``.  (Neil Martinsen-Burrell, #505093)
+
 Improvements
 ************
 
